--- a/components/imageThumbnail/template.html
+++ b/components/imageThumbnail/template.html
@@ -8,6 +8,10 @@
         .image-thumbnail-name {
             word-wrap: break-word;
         }
+
+        img {
+            cursor: pointer;
+        }
     </style>
     <div class="image-thumbnail">
         <div class="image-thumbnail-content">
