--- a/components/fileUploader/template.html
+++ b/components/fileUploader/template.html
@@ -6,7 +6,7 @@
         /*layout*/
         .image-upload {
             width: 100%;
-            height: 50px;
+            height: 80px;
         }
 
         .image-upload-option {
@@ -24,23 +24,9 @@
             border-right: 4px black dashed;
             box-sizing: border-box;
         }
-
-        [dragging] {
-            background-color: #364119;
-            color: white;
-            text-align: center;
-        }
-
-        /* Set this as absolute so we don't have problems
-           when it's hovered because it will trigger 'dragleave'.
-           And this will cause our dragging background to dissappear.
-         */
-        .drop-zone {
-            position: absolute;
-        }
     </style>
     <div class="image-upload">
-        <div class="input-field image-upload-option"><input type="file" multiple></div>
-        <div id="drag" class="image-upload-option"><h1 class="drop-zone">drop here</h1></div>
+        <div class="input-field image-upload-option"><h1>select here</h1><input type="file" multiple></div>
+        <div id="drag" class="image-upload-option"><h1>drop here</h1></div>
     </div>
 </template>
